Added client-side validation with unobtrusive js

--- a/aarhusWebDeveloperCoop/Views/master.cshtml
+++ b/aarhusWebDeveloperCoop/Views/master.cshtml
@@ -65,5 +65,7 @@
 
         <script src="~/Scripts/jquery-2.2.0.min.js"></script>
         <script src="~/Scripts/bootstrap.min.js"></script>
+        <script src="~/Scripts/jquery.validate.min.js"></script>
+        <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 	</body>
 </html>
