added more bootstrap. also the login button turns into logout if you're logged in

--- a/aarhusWebDeveloperCoop/Views/MacroPartials/loginForm.cshtml
+++ b/aarhusWebDeveloperCoop/Views/MacroPartials/loginForm.cshtml
@@ -63,7 +63,7 @@
 		var logoutModel = new PostRedirectModel();
 		logoutModel.RedirectUrl = "/";
 		using (Html.BeginUmbracoForm<UmbLoginStatusController>("HandleLogout")){
-			<button>Logout</button>
+			<button class="btn btn-primary input-medium pullleft">Logout</button>
 			@Html.HiddenFor(m => logoutModel.RedirectUrl)
 		}
 	}
